--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -36,15 +36,22 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
  	-->
+ 	
+ 	
+ 		<!-- 리스너 선언 -->
+	<listener>
+		<listener-class>listeners.ContextLoaderListener</listener-class>
+	</listener>
+ 	
 
-	<!-- 서블릿 선언 -->
+	<!-- 서블릿 선언 
 	<servlet>
 		<servlet-name>AppInitServlet</servlet-name>
 		<servlet-class>kr.co.daou.init.AppInitServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 
 	</servlet>
-  
+  -->
 
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
